@@ -1,6 +1,9 @@
 -------------------------------------------------------------------------------
 Changes in version 0.82
 
+- Added a QMTP front-end, with many features in common with the SMTP
+  front-end (excluding authentication, of course).
+
 - Fixed internal variable transposition bug in smtp-commands.c.
 
 Development of this version has been sponsored by FutureQuest, Inc.
